add endpoint documentation
